kustomize/overlays/prod/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: plastids-clusterip
spec:
  type: ClusterIP
  selector:
    app: plastids
    environment: prod
